     [remove_shroud], [place_shroud], [modify_side], [modify_ai] actions
   * Fixed bug #17150: fix naming confict with OpenBSD macro by renaming
   * Added "-Wno-strict-aliasing" to the default compiler flags
   * Whiteboard planning system:
     * Made the whiteboard respond better to :droid, :give_control, etc.
     * Removed chat notification upon activating the whiteboard

Version 1.9.8:
 * Campaigns:
   * Fixed deprecation warnings about "empty side="
 * Language and i18n:
   * Updated translations: British English, Estonian, Indonesian, Irish,
     Latin, Old English, Russian, Vietnamese
 * Lua API:
   * added support for slider and progress_bar widgets to
     wesnoth.get_dialog_value
   * added support for text_box, slider, and progress_bar widgets to
     wesnoth.set_dialog_value
   * new wesnoth.races table
   * wesnoth.get_terrain_info can now retrieve the editor_name field
 * Multiplayer server:
   * Handle incoming [whiteboard] data
   * Treat inactive forum accounts as unregistered users to prevent abuse
     of unverified registrations
 * User interface:
   * Converted New Folder dialog to GUI2
   * Moved Animate Map option from Advanced Preferences to Display
   * Moved Reverse Time Graphics display option to Advanced Preferences
   * Moved Scroll Tracking of Unit Actions display option to Advanced
     Preferences, renamed to Follow Unit Actions
   * Moved Unit Standing Animations option from Advanced Preferences to
     Display
   * Removed window decorations from GUI2 lobby
   * Sort the Recruit menu by localized unit type names (feature #18294)
   * Whiteboard planning system:
     * Added a new planned action type: "Suppose dead"
     * Changed behavior of invalid actions (no longer immediately discarded)
     * Disabled undo while planning mode is active
     * Made whiteboard plans visible to allied network players
 * Terrains:
   * Tweaked gameplay-visible names of terrain types, and restored many
     missing ones.