@@ -153,6 +153,14 @@
 [/advanced_preference]
 
 [advanced_preference]
+    field=show_all_units_in_help
+    name= _ "Show All Unit Types in Help"
+    description= _ "Show all unit types in the help (requires restart). This does not alter the list of encountered units."
+    type=boolean
+    default=no
+[/advanced_preference]
+
+[advanced_preference]
     field=joystick_support_enabled
     name=_"Joystick Support"
     type=boolean
