@@ -1800,7 +1800,7 @@ std::vector<topic> generate_unit_topics(const bool sort_generated, const std::st
 
 UNIT_DESCRIPTION_TYPE description_type(const unit_type &type)
 {
-	if (game_config::debug) {
+	if (game_config::debug || preferences::show_all_units_in_help()) {
 		return FULL_DESCRIPTION;
 	}
 
