@@ -220,6 +220,8 @@ Version 1.9.9:
    * Whiteboard planning system:
      * Made the whiteboard respond better to :droid, :give_control, etc.
      * Removed chat notification upon activating the whiteboard
+   * Added advanced preference to ignore the encountered units
+     list and show all unit types in the game Help
 
 Version 1.9.8:
  * Campaigns:
